CMS-7921: folder tree permissions web-resources